feat(task3): Completed A/B Hypothesis Testing. Validated Province and Zip Code as highly significant risk factors.

--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -692,8 +692,346 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "d4e81187",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Mer\\AppData\\Local\\Temp\\ipykernel_8416\\1123586665.py:10: DtypeWarning: Columns (32,37) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(file_path, sep='|')\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# --- 1. Data Loading (Assuming the clean file structure) ---\n",
+    "# Replace this path with the actual path to your file if you moved it outside of 'data/'\n",
+    "# Note: DVC pull should have restored this file to the 'data/' directory.\n",
+    "file_path = 'data/MachineLearningRating_v3.txt'\n",
+    "\n",
+    "# Load the data using the pipe delimiter\n",
+    "df = pd.read_csv(file_path, sep='|')\n",
+    "\n",
+    "# --- 2. Essential Cleaning from EDA ---\n",
+    "# Rename columns for ease of use (if you did this in EDA)\n",
+    "df.columns = df.columns.str.replace(' ', '').str.replace('/', '')\n",
+    "\n",
+    "# Ensure key variables are numeric and clean non-sensical negatives\n",
+    "financial_cols = ['TotalClaims', 'TotalPremium', 'CustomValueEstimate']\n",
+    "for col in financial_cols:\n",
+    "    # Convert to numeric, coercing errors to NaN\n",
+    "    df[col] = pd.to_numeric(df[col], errors='coerce')\n",
+    "    # Replace non-sensical negative values with 0 (as done in EDA)\n",
+    "    df.loc[df[col] < 0, col] = 0\n",
+    "\n",
+    "# Convert Gender to string and clean up.\n",
+    "df['Gender'] = df['Gender'].astype(str).str.strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "6bb5e2b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Levene's Test P-value (for variance equality): 0.8041\n",
+      "\n",
+      "--- Two-Sample T-Test Results (Male vs. Female Claims) ---\n",
+      "T-statistic: -0.2964\n",
+      "P-value: 0.7669656472\n",
+      "\n",
+      "Conclusion: Fail to Reject the Null Hypothesis. The P-value (0.7669656472) is greater than alpha (0.05).\n",
+      "The difference in mean claims is not statistically significant.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from scipy import stats\n",
+    "\n",
+    "# --- Prepare the data for the T-test ---\n",
+    "# Filter claims for Male and Female. We use TotalClaims as a proxy for risk severity.\n",
+    "male_claims = df[df['Gender'] == 'Male']['TotalClaims']\n",
+    "female_claims = df[df['Gender'] == 'Female']['TotalClaims']\n",
+    "\n",
+    "# Clean the data: Filter out the 'Unknown' and other non-binary values if they were not already cleaned.\n",
+    "# (Assuming they were handled, we just compare Male and Female groups here)\n",
+    "\n",
+    "# --- Check for Variance (Levene's Test) ---\n",
+    "# T-tests assume equal variance. Levene's test checks this.\n",
+    "# If p-value < 0.05, variances are unequal (use equal_var=False in t-test)\n",
+    "levene_test = stats.levene(male_claims, female_claims)\n",
+    "print(f\"Levene's Test P-value (for variance equality): {levene_test.pvalue:.4f}\")\n",
+    "\n",
+    "# --- Perform Two-Sample T-Test ---\n",
+    "# We generally assume unequal variances (Welch's T-test) for real-world insurance data.\n",
+    "# The `equal_var=False` parameter implements Welch's T-test, which is robust to unequal variances.\n",
+    "t_stat, p_value = stats.ttest_ind(male_claims, female_claims, equal_var=False)\n",
+    "\n",
+    "# Set significance level\n",
+    "alpha = 0.05\n",
+    "\n",
+    "print(\"\\n--- Two-Sample T-Test Results (Male vs. Female Claims) ---\")\n",
+    "print(f\"T-statistic: {t_stat:.4f}\")\n",
+    "print(f\"P-value: {p_value:.10f}\") # Show more precision for the p-value\n",
+    "\n",
+    "# --- Conclusion ---\n",
+    "if p_value < alpha:\n",
+    "    print(f\"\\nConclusion: Reject the Null Hypothesis. The P-value ({p_value:.10f}) is less than alpha ({alpha}).\")\n",
+    "    print(\"The difference in mean claims between Male and Female policyholders is STATISTICALLY SIGNIFICANT.\")\n",
+    "else:\n",
+    "    print(f\"\\nConclusion: Fail to Reject the Null Hypothesis. The P-value ({p_value:.10f}) is greater than alpha ({alpha}).\")\n",
+    "    print(\"The difference in mean claims is not statistically significant.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d7573f7e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Severity Sample Size: Male=94, Female=14\n",
+      "\n",
+      "--- T-Test Results: Gender Claim Severity (Claims > 0) ---\n",
+      "T-statistic: -0.5790\n",
+      "P-value: 0.5680286952\n",
+      "\n",
+      "Conclusion: Fail to Reject H₀. The difference in average claim severity is NOT statistically significant.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# --- 1. Claim Severity: T-Test (Comparing means of non-zero claims) ---\n",
+    "\n",
+    "# 1. Create a Claims-Only Dataframe\n",
+    "claims_only_df = df[df['TotalClaims'] > 0].copy()\n",
+    "\n",
+    "# 2. Segment the Data\n",
+    "male_severity = claims_only_df[claims_only_df['Gender'] == 'Male']['TotalClaims']\n",
+    "female_severity = claims_only_df[claims_only_df['Gender'] == 'Female']['TotalClaims']\n",
+    "\n",
+    "# Ensure groups are large enough\n",
+    "print(f\"Severity Sample Size: Male={len(male_severity)}, Female={len(female_severity)}\")\n",
+    "\n",
+    "# 3. Perform Welch's T-Test (robust for potentially unequal variances)\n",
+    "t_stat_sev, p_value_sev = stats.ttest_ind(male_severity, female_severity, equal_var=False)\n",
+    "alpha = 0.05\n",
+    "\n",
+    "print(\"\\n--- T-Test Results: Gender Claim Severity (Claims > 0) ---\")\n",
+    "print(f\"T-statistic: {t_stat_sev:.4f}\")\n",
+    "print(f\"P-value: {p_value_sev:.10f}\")\n",
+    "\n",
+    "# 4. Conclusion\n",
+    "if p_value_sev < alpha:\n",
+    "    print(f\"\\nConclusion: Reject H₀. The difference in average claim severity is STATISTICALLY SIGNIFICANT.\")\n",
+    "else:\n",
+    "    print(f\"\\nConclusion: Fail to Reject H₀. The difference in average claim severity is NOT statistically significant.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "910f0499",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- Chi-Squared Test Results: Gender Claim Frequency ---\n",
+      "Contingency Table (Count of Policies):\n",
+      "Claimed      0   1\n",
+      "Gender            \n",
+      "Male     42723  94\n",
+      "Female    6741  14\n",
+      "\n",
+      "Chi-Squared Statistic: 0.0037\n",
+      "P-value: 0.9514644755\n",
+      "\n",
+      "Conclusion: Fail to Reject H₀. The difference in claim frequency is NOT statistically significant.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import chi2_contingency\n",
+    "\n",
+    "# --- 2. Claim Frequency: Chi-Squared Test (Comparing proportions) ---\n",
+    "\n",
+    "# 1. Create a binary claim indicator\n",
+    "df['Claimed'] = np.where(df['TotalClaims'] > 0, 1, 0)\n",
+    "\n",
+    "# 2. Create the Contingency Table (Observed Frequencies)\n",
+    "# Rows: Gender | Columns: Claimed (0 or 1)\n",
+    "contingency_table = pd.crosstab(df['Gender'], df['Claimed'])\n",
+    "\n",
+    "# Remove 'Unknown' or other low-volume groups for a cleaner test (if necessary)\n",
+    "contingency_table = contingency_table.loc[['Male', 'Female']]\n",
+    "\n",
+    "# 3. Perform Chi-Squared Test\n",
+    "chi2_stat, p_value_freq, dof, expected = chi2_contingency(contingency_table)\n",
+    "\n",
+    "print(\"\\n--- Chi-Squared Test Results: Gender Claim Frequency ---\")\n",
+    "print(\"Contingency Table (Count of Policies):\")\n",
+    "print(contingency_table)\n",
+    "print(f\"\\nChi-Squared Statistic: {chi2_stat:.4f}\")\n",
+    "print(f\"P-value: {p_value_freq:.10f}\")\n",
+    "\n",
+    "# 4. Conclusion\n",
+    "if p_value_freq < alpha:\n",
+    "    print(f\"\\nConclusion: Reject H₀. The difference in claim frequency is STATISTICALLY SIGNIFICANT.\")\n",
+    "else:\n",
+    "    print(f\"\\nConclusion: Fail to Reject H₀. The difference in claim frequency is NOT statistically significant.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "9c88cd06",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing the following Provinces for significant claim severity differences: ['Gauteng', 'Western Cape', 'KwaZulu-Natal', 'North West', 'Mpumalanga']\n",
+      "\n",
+      "--- One-Way ANOVA Results: Province Claim Severity (Claims > 0) ---\n",
+      "F-statistic: 8.4575\n",
+      "P-value: 0.0000008881\n",
+      "\n",
+      "Conclusion: Reject H₀. The P-value (0.0000008881) is less than alpha (0.05).\n",
+      "The difference in mean claim severity across the Top Provinces is STATISTICALLY SIGNIFICANT.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Assuming 'df' and 'claims_only_df' from the previous steps are available.\n",
+    "# Re-running the data preparation steps to be safe:\n",
+    "top_provinces = df['Province'].value_counts().nlargest(5).index\n",
+    "claims_only_df = df[df['TotalClaims'] > 0].copy()\n",
+    "\n",
+    "# --- Prepare data for ANOVA (Geographical Risk) ---\n",
+    "\n",
+    "# Create a list of claim severity arrays, one for each of the top 5 provinces\n",
+    "province_severity_list = [\n",
+    "    claims_only_df[claims_only_df['Province'] == province]['TotalClaims'].values\n",
+    "    for province in top_provinces\n",
+    "]\n",
+    "\n",
+    "# Exclude any empty arrays if a top province somehow had zero claims in the sample (highly unlikely but defensive)\n",
+    "province_severity_list = [arr for arr in province_severity_list if len(arr) > 0]\n",
+    "\n",
+    "print(f\"Testing the following Provinces for significant claim severity differences: {list(top_provinces)}\")\n",
+    "\n",
+    "# --- Perform One-Way ANOVA ---\n",
+    "# This tests if the mean claim severity of any province is statistically different from the others.\n",
+    "f_stat, p_value_anova = stats.f_oneway(*province_severity_list)\n",
+    "alpha = 0.05\n",
+    "\n",
+    "print(\"\\n--- One-Way ANOVA Results: Province Claim Severity (Claims > 0) ---\")\n",
+    "print(f\"F-statistic: {f_stat:.4f}\")\n",
+    "print(f\"P-value: {p_value_anova:.10f}\")\n",
+    "\n",
+    "# --- Conclusion ---\n",
+    "if p_value_anova < alpha:\n",
+    "    print(f\"\\nConclusion: Reject H₀. The P-value ({p_value_anova:.10f}) is less than alpha ({alpha}).\")\n",
+    "    print(\"The difference in mean claim severity across the Top Provinces is STATISTICALLY SIGNIFICANT.\")\n",
+    "else:\n",
+    "    print(f\"\\nConclusion: Fail to Reject H₀. The P-value ({p_value_anova:.10f}) is greater than alpha ({alpha}).\")\n",
+    "    print(\"The difference in mean claim severity across the Top Provinces is NOT statistically significant.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "61444362",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- Testing Hypothesis H₀: No risk differences between zip codes ---\n",
+      "P-value for Claim Severity difference: 0.0000000000\n",
+      "Conclusion: Reject H₀. Zip Code groups have a STATISTICALLY SIGNIFICANT difference in claim severity.\n",
+      "\n",
+      "--- Testing Hypothesis H₀: No significant margin (profit) difference between zip codes ---\n",
+      "P-value for Margin difference: 0.0000000000\n",
+      "Conclusion: Reject H₀. Zip Code groups have a STATISTICALLY SIGNIFICANT difference in margin (profit).\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Assuming 'df' and 'claims_only_df' are available.\n",
+    "\n",
+    "# 1. Calculate Mean Severity per Postal Code (Zip Code)\n",
+    "zip_severity = claims_only_df.groupby('PostalCode')['TotalClaims'].mean().reset_index()\n",
+    "zip_severity.rename(columns={'TotalClaims': 'MeanSeverity'}, inplace=True)\n",
+    "\n",
+    "# 2. Define High-Risk and Low-Risk Groups\n",
+    "# We'll use the 75th percentile of MeanSeverity as the cutoff for 'High-Risk'\n",
+    "risk_cutoff = zip_severity['MeanSeverity'].quantile(0.75)\n",
+    "\n",
+    "# Merge the risk calculation back to the main DataFrame\n",
+    "df = df.merge(zip_severity, on='PostalCode', how='left')\n",
+    "\n",
+    "# Classify the Postal Codes\n",
+    "df['ZipRiskGroup'] = np.where(df['MeanSeverity'] >= risk_cutoff, 'HighRisk', 'LowRisk')\n",
+    "\n",
+    "# --- 4.1 Test for Risk Differences (Claim Severity) ---\n",
+    "print(\"\\n--- Testing Hypothesis H₀: No risk differences between zip codes ---\")\n",
+    "\n",
+    "high_risk_severity = df[df['ZipRiskGroup'] == 'HighRisk']['TotalClaims'].fillna(0)\n",
+    "low_risk_severity = df[df['ZipRiskGroup'] == 'LowRisk']['TotalClaims'].fillna(0)\n",
+    "\n",
+    "# Note: We include zero claims here for simplicity since the groups are large and created based on claim data.\n",
+    "# We must fill NaN values (for PostalCodes not present in claims_only_df) with 0 before comparison.\n",
+    "\n",
+    "t_stat_zip, p_value_zip = stats.ttest_ind(high_risk_severity, low_risk_severity, equal_var=False)\n",
+    "\n",
+    "print(f\"P-value for Claim Severity difference: {p_value_zip:.10f}\")\n",
+    "if p_value_zip < 0.05:\n",
+    "    print(\"Conclusion: Reject H₀. Zip Code groups have a STATISTICALLY SIGNIFICANT difference in claim severity.\")\n",
+    "else:\n",
+    "    print(\"Conclusion: Fail to Reject H₀. Zip Code groups do NOT have a statistically significant difference.\")\n",
+    "\n",
+    "# --- 4.2 Test for Margin/Profit Difference ---\n",
+    "# Margin = TotalPremium - TotalClaims (as defined in instructions)\n",
+    "df['Margin'] = df['TotalPremium'] - df['TotalClaims']\n",
+    "\n",
+    "high_risk_margin = df[df['ZipRiskGroup'] == 'HighRisk']['Margin'].fillna(0)\n",
+    "low_risk_margin = df[df['ZipRiskGroup'] == 'LowRisk']['Margin'].fillna(0)\n",
+    "\n",
+    "print(\"\\n--- Testing Hypothesis H₀: No significant margin (profit) difference between zip codes ---\")\n",
+    "\n",
+    "t_stat_margin, p_value_margin = stats.ttest_ind(high_risk_margin, low_risk_margin, equal_var=False)\n",
+    "\n",
+    "print(f\"P-value for Margin difference: {p_value_margin:.10f}\")\n",
+    "if p_value_margin < 0.05:\n",
+    "    print(\"Conclusion: Reject H₀. Zip Code groups have a STATISTICALLY SIGNIFICANT difference in margin (profit).\")\n",
+    "else:\n",
+    "    print(\"Conclusion: Fail to Reject H₀. Zip Code groups do NOT have a statistically significant difference in margin.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "d4280848",
+   "id": "2cd313e3",
    "metadata": {},
    "outputs": [],
    "source": []
